[package]
name = "ylog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.38" }
urlencoding = { version = "2.1.3" }
leptos = { version = "0.6.12", features = ["csr", "nightly"] }
thaw = { version = "0.3.3", features = ["csr"] }
leptos-use = "0.10.10"
icondata = "0.3.1"
tungstenite = "0.23.0"
